kubernetes/contoso-website/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.b05bb813100f4587b369.eastus.aksapp.io
      http:
        paths:
          - backend:
              serviceName: contoso-website
              servicePort: http
            path: /
